# hourly_wages_util

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject.yaml  requirements.txt  shift_calculator.py  shift_events_creation.py  utils.py
data/: 2024-01_shift.json  2024-02_shift.json  2024-07_shift.json  2024-09_shift.json  2024-10_shift.json  aug_shift.json  fab_shift.json  feb_shift.json  holiday.json  jan_shift.json  shift_type.json
utils/: create_shift_from_text.py  google_calendar_api.py  image_to_text.py  shift_calculator.py  shift_events_creation.py
