[tool.yapf]
based_on_style = "google"
column_limit = 79
indent_width = 4
spaces_around_default_or_named_assign = true
spaces_around_power_operator = true
spaces_before_comment = 2
split_before_logical_operator = true

[tool.isort]
profile = "hug"
src_paths = ["isort", "test"]

[tool.poetry]
name = "hourly-wages-util"
version = "0.1.0"
description = ""
authors = ["Jimshih <m11001107@ntust.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.139.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
chardet = "^5.2.0"
opencv-python = ">=4.8.1.78,<4.9.0.0"
numpy = ">=1.26.1,<1.27.0"
easyocr = ">=1.7.1,<1.8.0"
jupyter = "^1.0.0"
notebook = "^7.2.1"
pandas = "^2.2.2"
pre-commit = "^3.8.0"
isort = "^5.13.2"
prettier = "^0.0.7"
yapf = "^0.40.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
